# data_lakehouse

./: .gitignore  README.md  pyproject.toml
frontend/: main.py
frontend/dashboard/: dashboard.md
generate_datasets/: generate_raw.py  load_raw_to_postgres.py
terraform/: rds.tf  terraform.tfstate  tfplan
