[project]
name = "data-lakehouse"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dbt-core>=1.9.3",
    "dbt-postgres>=1.9.0",
    "duckdb>=1.2.1",
    "faker>=37.0.2",
    "polars>=1.25.2",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.0.1",
    "taipy>=4.0.2",
    "tqdm>=4.67.1",
]
