[project]
name = "data-lakehouse"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "taipy==3.1.1",
    "polars==1.8.2",
    "faker==29.0.0",
    "python-dotenv==1.0.1",
    "duckdb==1.1.1",
    "dbt-core==1.8.7",
    "dbt-postgres==1.8.2",
    "psycopg2-binary==2.9.9",
    "matplotlib==3.9.2",
    "seaborn==0.13.2",
    "plotly==5.24.1",
    "tqdm==4.66.5"
]
